# desktop-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: pr.md  python.md  readme.md  standards.md  testing.md
agent/: approvals.py  evaluate.py  guardrails.py  main.py  manager.py  trace.py
app_agents/: desktop_agent.py  summary_agent.py
docs/: blue_whale_mountain_lion_report.md  concepts.md  e2e.md  evaluation.md
docs/evals/: evaluation_2026-06-13_f13c336.md  evaluation_2026-06-26_c39c846.md
schemas/: models.py
tests/: test_approvals.py  test_context7.py  test_guardrails.py  test_manager.py  test_sandbox.py  test_tools.py
tools/: context7.py  execute.py  read.py  sandbox.py  search.py  write.py
