[project]
name = "desktop-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai-agents",
    "openai",
    "pydantic",
    "playwright",
    "pyperclip",
    "rich",
    "python-dotenv",
    "flask",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "app_agents", "tools", "schemas"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
